# ros2-patrol-project

./: README.md  install.sh  package.xml  setup.cfg  setup.py  verify.sh
config/: nav2_params.yaml  patrol_points.yaml
launch/: patrol_full.launch.py  patrol_gazebo.launch.py  patrol_navigation.launch.py
patrol_navigation_project/: __init__.py  patrol_controller.py  patrol_visualizer.py  waypoint_manager.py
rviz/: patrol_config.rviz
test/: test_copyright.py  test_flake8.py  test_pep257.py
